# wayfinder

./: Cargo.toml  LICENSE  README.markdown  commons.routes  example.routes
examples/cli/: Cargo.toml  build.rs
examples/cli/src/: main.rs
examples/structured/: Cargo.toml  build.rs
examples/structured/routes/: base.rs  books.rs  mod.rs  people.rs
examples/structured/src/: main.rs
src/: config.rs  errors.rs  flat.rs  gen.rs  lib.rs  parse.rs  tests.rs  trie.rs
wayfinder/: Cargo.toml  README.markdown
wayfinder-build/: Cargo.toml
wayfinder-build/src/: lib.rs
wayfinder-cmd/: Cargo.toml
wayfinder-cmd/src/: main.rs
wayfinder-core/: Cargo.toml
wayfinder-core/src/: lib.rs  macros.rs
wayfinder-gen/: Cargo.toml
wayfinder-gen/src/: flat.rs  gen.rs  lib.rs  trie.rs
wayfinder-goal/: Cargo.toml
wayfinder-goal/src/: benches.rs  lib.rs  routes.rs
wayfinder-parse/: Cargo.toml
wayfinder-parse/src/: errors.rs  lib.rs
wayfinder-run/: Cargo.toml
wayfinder-run/src/: lib.rs
wayfinder-tests/: Cargo.toml  build.rs
wayfinder-tests/cases/commons/: routes.rs
wayfinder-tests/cases/example/: routes.routes  routes.rs
wayfinder-tests/cases/nesting/: routes.routes  routes.rs
wayfinder-tests/src/: diff.rs  lib.rs  macros.rs
wayfinder/src/: lib.rs
wayfinder/src/core/: macros.rs
wayfinder/src/parse/: errors.rs  mod.rs
