[package]
name = "wayfinder-build"
version = "0.1.0"
authors = ["Andrew Dona-Couch <hi@andrewcou.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayfinder-core = { path = "../wayfinder-core" }
wayfinder-gen = { path = "../wayfinder-gen" }
wayfinder-parse = { path = "../wayfinder-parse" }
