[package]
name = "wayfinder-gen"
version = "0.1.0"
authors = ["Andrew Dona-Couch <hi@andrewcou.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
http = []

[dependencies]
itertools = "0.8"
wayfinder-core = { path = "../wayfinder-core" }
