[package]
name = "wayfinder-parse"
version = "0.1.0"
authors = ["Andrew Dona-Couch <hi@andrewcou.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.0"
nom = { version = "4.1.1", features = ["verbose-errors"] }
wayfinder-core = { path = "../wayfinder-core" }
