[package]
name = "wayfinder-tests"
version = "0.1.0"
authors = ["Andrew Dona-Couch <hi@andrewcou.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "4.1.1", features = ["verbose-errors"] }
wayfinder-core = { path = "../wayfinder-core" }
wayfinder-gen = { path = "../wayfinder-gen" }
wayfinder-parse = { path = "../wayfinder-parse" }

[dev-dependencies]
prettydiff = "0.3"

[build-dependencies]
itertools = "0.8"
