[package]
name = "wayfinder-tests"
version = "0.1.0"
authors = ["Andrew Dona-Couch <hi@andrewcou.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.9"
nom = { version = "4.1.1", features = ["verbose-errors"] }
prettydiff = "0.3"
wayfinder = { path = "../wayfinder" }

[build-dependencies]
itertools = "0.8"
