[package]
name = "wayfinder"
version = "0.2.0"
authors = ["Andrew Dona-Couch <hi@andrewcou.ch>"]
edition = "2018"
license = "MIT"
description = "A little HTTP router generator"
documentation = "https://docs.rs/wayfinder"
repository = "https://github.com/couchand/wayfinder"
readme = "README.markdown"
categories = ["web-programming"]
keywords = ["url", "http", "router"]

[dependencies]
itertools = "0.8"
lazy_static = "1.0"
nom = { version = "4.1.1", features = ["verbose-errors"] }
