[package]
name = "router-cli"
version = "0.1.0"
authors = ["Andrew Dona-Couch <hi@andrewcou.ch>"]
edition = "2018"

[dependencies]
uuid = { version = "0.7", features = ["serde"] }

[dev-dependencies]
wayfinder = { path = "../../wayfinder" }

[build-dependencies]
wayfinder = { path = "../../wayfinder" }
