[package]
name = "structured"
version = "0.1.0"
authors = ["Andrew Dona-Couch <hi@andrewcou.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["serde"] }

[dev-dependencies]
wayfinder = { path = "../../wayfinder" }

[build-dependencies]
wayfinder = { path = "../../wayfinder" }
